--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# This file is created from a github gitignore template for python projects.
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
