--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.csv
 # This file is created from a github gitignore template for python projects.
 # Byte-compiled / optimized / DLL files
 __pycache__/
